# advent-of-code-2022

benchmark/: Cargo.toml
benchmark/src/: lib.rs  main.rs
calorie_counting-day1/: Cargo.toml
calorie_counting-day1/src/: main.rs
camp_cleanup-day4/: Cargo.toml
camp_cleanup-day4/src/: main.rs
day1_calorie_counting/: Cargo.toml
day1_calorie_counting/src/: main.rs
day2_rock_paper_scissors/: Cargo.toml
day2_rock_paper_scissors/src/: main.rs
day3_rucksack_reorganization/: Cargo.toml
day3_rucksack_reorganization/src/: main.rs
day4_camp_cleanup/: Cargo.toml
day4_camp_cleanup/src/: main.rs
day5_supply_stacks/: Cargo.toml
day5_supply_stacks/src/: main.rs
day6_tuning_trouble/src/: main.rs
rock_paper_scissors-day2/: Cargo.toml
rock_paper_scissors-day2/src/: main.rs
rucksack_reorganization-day3/: Cargo.toml
rucksack_reorganization-day3/src/: main.rs
supply_stacks-day5/: Cargo.toml
supply_stacks-day5/src/: main.rs
