[package]
name = "benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
benchmarking = "0.4.11"
day1_calorie_counting = { path = "../day1_calorie_counting" }
day2_rock_paper_scissors = { path = "../day2_rock_paper_scissors" }
day3_rucksack_reorganization = { path = "../day3_rucksack_reorganization" }
day4_camp_cleanup = { path = "../day4_camp_cleanup" }
day5_supply_stacks = { path = "../day5_supply_stacks" }